kube-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: counter-service
spec:
  type: NodePort
  selector:
    app: counter-service
  ports:
    - port: 80
      targetPort: 80
