ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: counter-service-vic
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: counter-service-vic
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance 
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: counter-service
            port:
              number: 80

---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: counter-service
spec:
  ports:
    - port: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: app-counter
