kube-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vic-alb
  labels: 
    app: counter-service
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  rules:
    - host: vic-counter-services.com
      http:
        paths:
          - path: /*
            backend:
              service:
                name: counter-service
                port:
                  number: 80
